syntax = "proto3";

package shared;

option go_package = "github.com/ahrav/gitleaks-armada/proto;proto";

// Common source types used across different domains (enumeration, scanning)
enum SourceType {
  SOURCE_TYPE_UNSPECIFIED = 0;
  SOURCE_TYPE_GITHUB = 1;
  SOURCE_TYPE_S3 = 2;
  SOURCE_TYPE_URL = 3;
}

message GitHubTarget {
  string org = 1;
  repeated string repo_list = 2;
  map<string, string> metadata = 3;
}

message S3Target {
  string bucket = 1;
  string prefix = 2;
  string region = 3;
  map<string, string> metadata = 4;
}

message URLTarget {
  repeated string urls = 1;
  string archive_format = 2;
  map<string, string> headers = 3;
  double rate_limit = 4;
  RetryConfig retry = 5;
  map<string, string> metadata = 6;
}

message RetryConfig {
  int32 max_attempts = 1;
  int64 initial_wait_ms = 2;
  int64 max_wait_ms = 3;
}

message TargetSpec {
  string name = 1;
  SourceType source_type = 2;
  string auth_ref = 3;
  oneof target {
    GitHubTarget github = 4;
    S3Target s3 = 5;
    URLTarget url = 6;
  }
}

message AuthConfig {
  string type = 1;
  map<string, string> config = 2;
}

message ScanConfig {
  map<string, AuthConfig> auth = 1;
  repeated TargetSpec targets = 2;
}

message EnumerationRequestedEvent {
  string event_id = 1;
  int64 occurred_at = 2;
  ScanConfig config = 3;
  string requested_by = 4;
}
